Fix tracks page filters on mobile

--- a/app/assets/stylesheets/tracks/_index.scss
+++ b/app/assets/stylesheets/tracks/_index.scss
@@ -1,4 +1,11 @@
 .tracks-filters {
   display: flex;
   gap: 0.5rem;
+  flex-direction: column;
+}
+
+@media (min-width: 768px) {
+  .tracks-filters {
+    flex-direction: row;
+  }
 }
